# PLI

./: LICENSE  README.md
IronSpring/Documentation/: Iron Spring PL_I Compiler Programming Guide.html  Iron Spring Software - Links.html
IronSpring/Free Stuff/: check.pli  elf_hash.pli  elf_struct.pli  xpl.tgz
IronSpring/ispp-0.1.6/: ispp  ppread.me
IronSpring/pli-1.3.1/: library_linux.html  library_os2.html  makefile  plic  prog_guide.html  readme_linux.html  readme_os2.html
IronSpring/pli-1.3.1/lib/: prf.def  (+1 more)
RUST-PLI-PREPROCESSOR/: Chat history ChatGPT GPT PLI .txt
RUST-PLI-PREPROCESSOR/pli_preprocessor/: .gitignore  Cargo.toml  Doxyfile  README.md  RELEASE_NOTES.md  prompt_log.md
RUST-PLI-PREPROCESSOR/pli_preprocessor/src/: lib.rs  main.rs  main_page.rs  main_v1.rs
RUST-PLI-PREPROCESSOR/pli_preprocessor/src/modules/: evaluator.rs  include_handler.rs  logger.rs  output.rs  parser.rs  tokenizer.rs  validator.rs  wrk1.rs
RUST-PLI-PREPROCESSOR/pli_preprocessor/src/modules/tokenizer/: directive.rs  mod.rs  special_char.rs  string_literal.rs  token.rs  tokenizer_logic.rs  utils.rs
RUST-PLI-PREPROCESSOR/pli_preprocessor/tests/: conditional_tests.rs  evaluator_tests.rs  include_handler_tests.rs  macro_expander_tests.rs  output_tests.rs  parser_tests.rs  pli_preprocessor_tests.rs  test_case_generator.rs  test_input.pli  test_output.pli  tokenizer_tests.rs  validator_tests.rs
RUST-PLI-PREPROCESSOR/pli_preprocessor/tests/input/: dummy.txt  edge_case.pli  invalid_file.txt  valid_file.pp
RUST-PLI-PREPROCESSOR/pli_tokenizer/: Cargo.toml  README.md  prompt_log.md
(+61 files in other folders)
